assets/css/base/3-post/_responsive.scss
/*! Responsive Styles */

@media only screen and (min-width: 768px) {
    html {
        font-size: 20px;
    }

    .container, .footer, .nav {
        max-width: 48rem;
    }

    .project-thumb {
        height: 240px;
        width: 320px;
    }
}

@media only screen and (min-width: 1024px) {
    .container, .footer, .nav {
        max-width: 60rem;
    }

    .project-thumb {
        height: 280px;
        width: 420px;
    }
}

@media only screen and (min-width: 1280px) {
    .container, .footer, .nav {
        max-width: 60rem;
    }

    .project-thumb {
        height: 280px;
        width: 420px;
    }
}

@media only screen and (min-width: 1920px) {
    .container, .footer, .nav {
        max-width: 72rem;
    }

    .project-thumb {
        height: 280px;
        width: 420px;
    }
}

@media only screen and (max-width: 768px) {
    pre {
        max-height: 500px;
        font-size: 0.8rem;

        code {
            font-size: 0.8rem;
        }
    }

    .post-list-date {
        margin-left: 0;
        float: none;
    }

    .post-list-desc {
        padding-right: 0;
    }

    .project-list {
        max-width: 80vw;
        margin: 0px;
    }

    .project-thumb {
        height: 40vw;
        width: 80vw;
    }

    a {
        /* These are technically the same, but use both */
        overflow-wrap: break-word;
        word-wrap: break-word;

        -ms-word-break: break-all;
        /* This is the dangerous one in WebKit, as it breaks things wherever */
        word-break: break-all;
        /* Instead use this non-standard one: */
        word-break: break-word;

        /* Adds a hyphen where the word breaks, if supported (No Blink) */
        -moz-hyphens: auto;
        -ms-hyphens: auto;
        -webkit-hyphens: auto;
        hyphens: auto;
    }
}

@media only screen and (max-width: 480px) {
    body {
        font-size: 0.9rem;
    }

    .nav {
        font-size: 0.7rem;
    }

    .container img {
        max-width: 100vw;
        margin-left: -16px;
        margin-right: -16px;
        border-radius: 0px;
        transform: none;
    }
}

